==> Cyberangel55321/Smart_weather_clock_based_on_FreeRTOS/driver/aht20/aht20.c <==
#include "stm32f4xx.h"
#include "aht20.h"
#include "cpu_tick.h"

static bool aht20_write(uint8_t data[], uint32_t len);
static bool aht20_read(uint8_t data[], uint32_t len);
static bool aht20_read_status(uint8_t *status);
static bool aht20_is_busy(void);
static bool aht20_is_ready(void);

bool aht20_init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
    GPIO_StructInit(&GPIO_InitStruct);
    GPIO_InitStruct.GPIO_Pin = GPIO_Pin_10 | GPIO_Pin_11;
    GPIO_InitStruct.GPIO_Mode = GPIO_Mode_AF;
    GPIO_InitStruct.GPIO_Speed = GPIO_High_Speed;
    GPIO_InitStruct.GPIO_OType = GPIO_OType_OD;
    GPIO_InitStruct.GPIO_PuPd = GPIO_PuPd_NOPULL;
    GPIO_Init(GPIOB, &GPIO_InitStruct);
    GPIO_PinAFConfig(GPIOB, GPIO_PinSource10, GPIO_AF_I2C2);
    GPIO_PinAFConfig(GPIOB, GPIO_PinSource11, GPIO_AF_I2C2);

    I2C_InitTypeDef I2C_InitStruct;
    I2C_StructInit(&I2C_InitStruct);
    I2C_InitStruct.I2C_ClockSpeed = 100ul * 1000ul;
    I2C_InitStruct.I2C_Mode = I2C_Mode_I2C;
    I2C_InitStruct.I2C_DutyCycle = I2C_DutyCycle_2;    
    I2C_InitStruct.I2C_OwnAddress1 = 0x00;
    I2C_InitStruct.I2C_Ack = I2C_Ack_Enable;
    I2C_InitStruct.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
    I2C_Init(I2C2, &I2C_InitStruct);
    I2C_Cmd(I2C2, ENABLE);

    cpu_delay_ms(40);
    if (aht20_is_ready())
        return true;

    if (!aht20_write((uint8_t[]){0xBE, 0x08, 0x00}, 3))
        return false;

    for (uint32_t t = 0; t < 100; t++)
    {
        cpu_delay_ms(1);
        if (aht20_is_ready())
            return true;
    }

    return false;
}

#define I2C_CHECK_EVENT(EVENT, TIMEOUT) \
    do { \
        uint32_t timeout = TIMEOUT; \
        while (!I2C_CheckEvent(I2C2, EVENT) && timeout > 0)  \
        { \
            cpu_delay_us(10); \
            timeout -= 10; \
        } \
        if (timeout <= 0) \
            return false; \
    } while (0)

static bool aht20_write(uint8_t data[], uint32_t len)
{
    I2C_AcknowledgeConfig(I2C2, ENABLE);
    I2C_GenerateSTART(I2C2, ENABLE);
    I2C_CHECK_EVENT(I2C_EVENT_MASTER_MODE_SELECT, 1000);

    I2C_Send7bitAddress(I2C2, 0x70, I2C_Direction_Transmitter);
    I2C_CHECK_EVENT(I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED, 1000);

    for (uint32_t i = 0; i < len; i++)
    {
        I2C_SendData(I2C2, data[i]);
        I2C_CHECK_EVENT(I2C_EVENT_MASTER_BYTE_TRANSMITTING, 1000);
    }

    I2C_GenerateSTOP(I2C2, ENABLE);
    
    return true;
}

static bool aht20_read(uint8_t data[], uint32_t len)
{
    I2C_AcknowledgeConfig(I2C2, ENABLE);
    I2C_GenerateSTART(I2C2, ENABLE);
    I2C_CHECK_EVENT(I2C_EVENT_MASTER_MODE_SELECT, 1000);

    I2C_Send7bitAddress(I2C2, 0x70, I2C_Direction_Receiver);
    I2C_CHECK_EVENT(I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED, 1000);

    for (uint32_t i = 0; i < len; i++)
    {
        if (i == len - 1)
            I2C_AcknowledgeConfig(I2C2, DISABLE);
        I2C_CHECK_EVENT(I2C_EVENT_MASTER_BYTE_RECEIVED, 1000);
        data[i] = I2C_ReceiveData(I2C2);
    }

    I2C_GenerateSTOP(I2C2, ENABLE);
    
    return true;
}

static bool aht20_read_status(uint8_t *status)
{
    uint8_t cmd = 0x71;
    if (!aht20_write(&cmd, 1))
        return false;
    if (!aht20_read(status, 1))
        return false;
    
    return true;
}

static bool aht20_is_busy(void)
{
    uint8_t status;
    if (!aht20_read_status(&status))
        return false;
    return (status & 0x80) != 0;
}

static bool aht20_is_ready(void)
{
    uint8_t status;
    if (!aht20_read_status(&status))
        return false;
    return (status & 0x08) != 0;
}

bool aht20_start_measurement(void)
{
    uint8_t cmd[] = {0xAC, 0x33, 0x00};
    if (!aht20_write(cmd, sizeof(cmd)))
        return false;

    return true;
}

bool aht20_wait_for_measurement(void)
{
    for (uint32_t t = 0; t < 200; t++)
    {
        cpu_delay_ms(1);
        if (!aht20_is_busy())
            return true;
    }
    
    return true;
}

bool aht20_read_measurement(float *temperature, float *humidity)
{
    uint8_t data[6];
    if (!aht20_read(data, sizeof(data)))
        return false;

    uint32_t raw_humidity = ((uint32_t)data[1] << 12) | 
                            ((uint32_t)data[2] << 4)  | 
                            ((uint32_t)data[3] >> 4);
    uint32_t raw_temperature = ((uint32_t)(data[3] & 0x0F) << 16) | 
                                ((uint32_t)data[4] << 8)          | 
                                ((uint32_t)data[5]);

    *humidity = raw_humidity * 100.0f / 1048576.0f;
    *temperature = raw_temperature * 200.0f / 1048576.0f - 50.0f;

    return true;
}
